--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -16,7 +16,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
-
       - name: 开始🔄自动同步🔄
         uses: repo-sync/github-sync@v2
         if: env.PAT
@@ -25,3 +24,15 @@ jobs:
           source_branch: "main"
           destination_branch: "page"
           github_token: ${{ github.event.client_payload.PAT || secrets.PAT }}
+      - name: branch -> Page
+        uses: actions/checkout@v2
+        with:
+          ref: page    
+      - name: rename CNAME
+        run: |
+          echo 'ht.mdex.co' > ./CNAME
+      - name: push CNAME
+        uses: EndBug/add-and-commit@v7
+        with:
+          message: 'update CNAME' 
+          branch: page
